--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "luminessence-front",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -21,8 +21,10 @@
     "@fullcalendar/resource-timeline": "^6.1.15",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "dompurify": "^3.2.4",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.2",
@@ -33,7 +35,7 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.17.0",
+    "eslint": "^9.22.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
